--- a/server/style/carrinhoS.css
+++ b/server/style/carrinhoS.css
@@ -31,7 +31,7 @@
     padding: 8px 0;
 }
 
-.botao #excl{
+.botao .b-excluir{
         background-color: var(--rosa-bebe);
         border: none;
         border-radius: 7px;
