--- a/server/style/notaFiscalS.css
+++ b/server/style/notaFiscalS.css
@@ -39,7 +39,7 @@ main{
     height: 30px;
 }
 
-.botao #excl{
+.botao .b-excluir{
     background-color: var(--rosa-bebe);
     border: none;
     border-radius: 7px;
