--- a/server/style/forms.css
+++ b/server/style/forms.css
@@ -1,6 +1,3 @@
-header.registro {
-    margin: 100px;
-}
 
 header.login {
     margin-top: 100px;
@@ -18,9 +15,10 @@ input {
     border: none;
 }
 
-footer {
+footer.registro {
     margin-top: 300px;
 }
+
 
 @media (max-width: 600px) {
     header {
