--- a/server/style/excluirFuncS.css
+++ b/server/style/excluirFuncS.css
@@ -46,6 +46,7 @@ main{
     justify-content: center;
 }
 
+
 .c1{
     background-color: var(--amarelo-bebe);
     padding: 15px;
@@ -53,11 +54,16 @@ main{
     margin: 20px 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .c2 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
 }
 
 .c3{
@@ -68,7 +74,13 @@ main{
 
 .conteiner1 button{
     width: 208px;
-    background-color: var(--azul-bebe);
+    background-color: var(--rosa-bebe);
+    border: none;
+    border-radius: 7px;
+    font-family: var(--Agbalumo);
+    width: 100px;
+    height: 39px;
+    font-size: 1.3rem;
 }
 
 .titulo{
@@ -77,32 +89,6 @@ main{
     font-size: 1.25rem;
     font-weight: bold;
 }
-
-.botao #excl{
-    background-color: var(--rosa-bebe);
-    border: none;
-    border-radius: 7px;
-    font-family: var(--Agbalumo);
-    width: 90px;
-    height: 30px;
-}
-
-.botao #edit{
-    background-color: var(--azul-bebe);
-    border: none;
-    border-radius: 7px;
-    font-family: var(--Agbalumo);
-    width: 90px;
-    height: 30px;
-}
-
-.botao #edit a, a:visited, a:active{
-    color: black;
-} 
-
-.botao #excl a, a:visited, a:active{
-    color: black;
-} 
 
 .voltar{
     background-color: var(--azul-bebe);
@@ -119,27 +105,6 @@ main{
 .voltar a, a:visited, a:active{
     color: black;
     text-decoration: none;
-}
-
-.exibir{
-    display: flex !important;
-    flex-direction: column;
-}
-
-form input{
-    padding-left: 4px;
-    border-radius: 10px;
-    border: 2px solid rgb(167, 167, 167);
-}
-
-form button[type=submit]{
-    border: none !important;
-    border-radius: 20px;
-    margin: 10px;
-}
-
-form{
-    display: none !important;
 }
 
 @media (min-width: 768px) {
