Revert "Laura func"

--- a/server/style/CabecalhoRodape.css
+++ b/server/style/CabecalhoRodape.css
@@ -12,86 +12,6 @@
     margin: 0;
 }
 
-/* Menu */
-
-header {
-	position: fixed;
-    width: 100%;
-	background-color: blue;
-	padding: 20px;
-	display: flex;
-	justify-content: space-around;
-	z-index: 2;
-}
-
-header img {
-	width: 30px;
-	height: 30px;
-}
-
-.logo {
-    display: flex;
-    font-family: var(--Agbalumo);
-    transition: 0.3s;
-    align-items: center;
-}
-
-.logo img{
-    width: 40px;
-    height: auto;
-}
-
-nav.navigation {
-    display: none;
-    font-family: var(--Nunito);
-}
-
-.navigation > a:hover {
-    color: white;
-    transition: 0.2s;
-}
-
-.carrinho:hover {
-    fill: white;
-}
-
-.toggleBox {
-	filter: invert(0);
-}
-
-nav.navigation.active {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	position: fixed;
-	left: 50%;
-    font-family: var(--Agbalumo);
-	top: 0;
-	width: 50%;
-	height: 100%;
-	background-color: var(--roxo-bebe);
-}
-
-nav.navigation.active a {
-	padding: 20px;
-	font-size: 1.15rem;
-	font-weight: 500;
-	text-decoration: none;
-    font-family: var(--Agbalumo);
-    transition: 0.3s;
-}
-.navigation.active > a:hover {
-  color: white;
-}
-
-.carrinho {
-    transition: 0.3s;
-    fill: black;
-}
-
-/* Fim */
-
 .cabecalho{
     background-color: var(--roxo-bebe);
     height: 130px;
@@ -109,9 +29,7 @@ main{
 }
 
 .titulo1{
-    font-family: var(--Agbalumo);
-    font-size: 1.30rem;
-    color: black;
+    display: none;
 }
 
 .cabecalho #menu{
@@ -148,34 +66,38 @@ main{
         height: 122px;
         border-radius: 0 0 30px 30px;
     }
-
-    nav.navigation {
-		display: flex;
-		align-items: center;
-        justify-content: space-around;
-        width: 25%;
-	}
-
-    .navigation a{
-        margin: 0 5px;
-        font-family: var(--Agbalumo);
-        font-size: 1.80rem;
-    }
-
-    #toggleBtn {
-        display: none;
-    }
-
     .titulo1{
         display: block;
-        width: 450px;
-        font-size: 2.20rem;
+        width: 250px;
     }
-    .logo img{
+    img{
         width: 89px;
         height: 85px;
     }
-
+    .cabec1{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .cabecalho .login, .sobre{
+        display: block;
+    }
+    .naveg{
+        display: flex;
+        align-items: center !important;
+        width: 35% !important;
+    }
+    .naveg a{
+        font-size: 1.8rem;
+    }
+    #menu{
+        display: none;
+    }
+    .carrinho{
+        width: 37px;
+        height: 40.491px;
+    }
     .rodape .linha{
         width: 1176px;
         height: 24px;
