--- a/server/style/editFuncS.css
+++ b/server/style/editFuncS.css
@@ -46,6 +46,7 @@ main{
     justify-content: center;
 }
 
+
 .c1{
     background-color: var(--amarelo-bebe);
     padding: 15px;
@@ -57,7 +58,7 @@ main{
 
 .c2 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column !important;
 }
 
 .c3{
@@ -78,32 +79,6 @@ main{
     font-weight: bold;
 }
 
-.botao #excl{
-    background-color: var(--rosa-bebe);
-    border: none;
-    border-radius: 7px;
-    font-family: var(--Agbalumo);
-    width: 90px;
-    height: 30px;
-}
-
-.botao #excl a, a:visited, a:active{
-    color: black;
-}
-
-.botao #edit a, a:visited, a:active{
-    color: black;
-}
-
-.botao #edit{
-    background-color: var(--azul-bebe);
-    border: none;
-    border-radius: 7px;
-    font-family: var(--Agbalumo);
-    width: 90px;
-    height: 30px;
-}
-
 .voltar{
     background-color: var(--azul-bebe);
     border: none;
@@ -121,25 +96,28 @@ main{
     text-decoration: none;
 }
 
-.exibir{
-    display: flex !important;
+form{
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin: auto;
 }
 
 form input{
     padding-left: 4px;
     border-radius: 10px;
     border: 2px solid rgb(167, 167, 167);
+    height: 30px;
 }
 
 form button[type=submit]{
     border: none !important;
     border-radius: 20px;
     margin: 10px;
-}
-
-form{
-    display: none !important;
+    background-color: var(--rosa-bebe);
+    font-family: var(--Agbalumo);
+    height: 30px;
+    font-size: 1.2rem;
 }
 
 @media (min-width: 768px) {
@@ -164,5 +142,6 @@ form{
         width: 150px;
         height: 150px;
     }
+
     
 }
