--- a/server/style/indexS.css
+++ b/server/style/indexS.css
@@ -26,6 +26,7 @@ header h1{
 .c1{
     display: grid;
     grid-template-columns: 160px 160px;
+    
 }
 
 .conteiner1 h3{
@@ -41,6 +42,7 @@ header h1{
     border-radius: 20px;
     margin-bottom: 20px;
     height: 210px;
+    margin: 20px;
 }
 
 .categ img{
