--- a/server/style/indexS.css
+++ b/server/style/indexS.css
@@ -26,7 +26,12 @@ header h1{
 .c1{
     display: grid;
     grid-template-columns: 160px 160px;
-    
+}
+
+.imagem{
+    width: 130px;
+    height: auto;
+    margin: 10px;
 }
 
 .conteiner1 h3{
@@ -41,13 +46,8 @@ header h1{
     width: 148px;
     border-radius: 20px;
     margin-bottom: 20px;
-    height: 210px;
+    height: auto;
     margin: 20px;
-}
-
-.categ img{
-    width: 148px;
-    border-radius: 20px;
 }
 
 .categ button{
@@ -57,7 +57,7 @@ header h1{
     border-radius: 20px;
     font-family: var(--Nunito);
     font-weight: bold;
-    margin-top: 2%;
+    margin: 10px;
 }
 
 .categ button a, a:visited, a:active{
