--- a/server/style/saboresS.css
+++ b/server/style/saboresS.css
@@ -23,11 +23,26 @@ header h1{
     padding: 15px;
     border-radius: 20px;
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.c2 {
+    display: flex;
+    flex-direction: row !important;
+}
+
+.c3{
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .imagem{
-    border-radius: 20px;
-    margin-top: 10px;
+    margin: 10px;
+    width: 120px;
+    height: auto;
 }
 
 .titulo{
@@ -68,15 +83,15 @@ header h1{
     color: black;
 }
 
-.voltar a, a:visited, a:active{
+a, a:visited, a:active{
     color: black;
     text-decoration: none;
 }
 
 @media (min-width: 768px) {
     .imagem{
-        width: 107px;
-        height: 113px;
+        width: 160px;
+        height: auto;
     }
     .conteiner1{
         display: flex;
