--- a/server/style/carrinhoS.css
+++ b/server/style/carrinhoS.css
@@ -68,8 +68,7 @@ select{
     margin-top: 30px;
 }
 
-.voltar a, a:visited, a:active{
-    text-decoration: none;
+a, a:visited, a:active, a:hover{
     color: black;
 }
 
@@ -85,11 +84,6 @@ select{
     padding: 0 10px;
     height: 30px;
     margin: 10px 0;
-}
-
-.c4 button a, a:visited, a:active{
-    color: black;
-    text-decoration: none;
 }
 
 form{
