--- a/server/style/saboresS.css
+++ b/server/style/saboresS.css
@@ -83,9 +83,8 @@ header h1{
     color: black;
 }
 
-a, a:visited, a:active{
+a, a:visited, a:active, a:hover{
     color: black;
-    text-decoration: none;
 }
 
 @media (min-width: 768px) {
