--- a/server/style/carrinhoS.css
+++ b/server/style/carrinhoS.css
@@ -31,6 +31,10 @@
     padding: 8px 0;
 }
 
+.imagem{
+    width: 100px;
+}
+
 .botao .b-excluir{
         background-color: var(--rosa-bebe);
         border: none;
